<resources>
    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="action_share">Share</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_pinning">Pin note</string>
    <string name="action_unpinning">Unpin note</string>
    <string name="action_protect">Protect note</string>
    <string name="action_unprotect">Unprotect note</string>
    <string name="text_new_note">New note</string>
    <string name="text_new_tag">New tag</string>
    <string name="text_edit_tag">Edit tag</string>
    <string name="text_title">Title</string>
    <string name="text_content">Content</string>
    <string name="main_sort">Sort</string>
    <string name="main_import">Import</string>
    <string name="main_export">Export</string>
    <string name="main_search">Search</string>
    <string name="protected_notes">Show protected notes</string>
    <string name="main_sort_by_title_asc">By title</string>
    <string name="main_sort_by_created_date_desc">By date</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="main_tags_list">Tags</string>
    <string name="share_via">Share via</string>
    <string name="change_light_theme">Light theme</string>
    <string name="change_dark_theme">Dark theme</string>
    <string name="search_title">Search note or #tag...</string>
    <string name="trash_activity">Trash</string>
    <string name="action_restore">Restore</string>
    <string name="export_successfully">Exported successfully in</string>
    <string name="import_successfully">notes were successfully imported</string>
    <string name="import_failed">Import failed</string>
    <string name="no_notes_selected">No notes selected</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="cancel">CANCEL</string>
    <string name="password_dialog_title">Enter your password</string>
    <string name="protected_notes_password">password</string>
    <string name="new_password_dialog_title">Set up new password</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="logged_in">Logged in!</string>
    <string name="add_a_tag">Add tags...</string>
    <string name="tags_activity_title">Tags</string>
    <string name="title_activity_tags_list">TagsListActivity</string>
    <string name="color_picker">color_picker</string>
...
