...
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tfTitle"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_title"
            android:inputType="text"
            android:selectAllOnFocus="true"
...

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tfContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_content"
                android:gravity="top"
                android:inputType="textMultiLine" />
        </ScrollView>
...
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentInputLayout">

        <MultiAutoCompleteTextView
            android:id="@+id/tag_edit_field"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_a_tag"
            android:inputType="text"
            android:singleLine="true" />
...
