
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tagListButton"
        android:icon="@drawable/ic_main_tag_list"
        android:title="@string/main_tags_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sortButton"
...
                android:id="@+id/sortByCreatedDateDescButton"
                android:title="@string/main_sort_by_created_date_desc"
                app:showAsAction="never" />
        </menu>
    </item>

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_main_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
...
