package at.tugraz.ist.swe.note;


import android.Manifest;
import android.os.Environment;
import android.support.test.InstrumentationRegistry;
import android.support.test.rule.ActivityTestRule;
import android.support.test.rule.GrantPermissionRule;
import android.support.test.runner.AndroidJUnit4;
import android.text.TextUtils;
import android.widget.ListView;
import android.widget.TextView;

import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.io.File;
import java.util.Random;

import at.tugraz.ist.swe.note.database.DatabaseHelper;

import static android.support.test.InstrumentationRegistry.getInstrumentation;
import static android.support.test.espresso.Espresso.onData;
import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.typeText;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isClickable;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.isEnabled;
import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static android.support.test.internal.runner.junit4.statement.UiThreadStatement.runOnUiThread;
import static junit.framework.Assert.assertFalse;
import static org.hamcrest.Matchers.anything;
import static org.junit.Assert.assertEquals;
import static org.junit.Assert.assertNotEquals;
import static org.junit.Assert.assertTrue;

@RunWith(AndroidJUnit4.class)
public class MainActivityTest {

    @Rule
    public ActivityTestRule<MainActivity> activityActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Rule
    public GrantPermissionRule mRuntimePermissionRule = GrantPermissionRule.grant(Manifest.permission.WRITE_EXTERNAL_STORAGE);

    @Before
    public void setUp() {
        Util.resetDatabase(new DatabaseHelper(InstrumentationRegistry.getTargetContext()));
    }

    @Test
    public void checkCreateNoteButtonVisibility() {
        onView(withId(R.id.createNoteButton)).check(matches(isDisplayed()));
    }

    @Test
    public void checkIfCreateButtonIsClickable() {
        onView(withId(R.id.createNoteButton)).check(matches(isClickable()));
    }

    @Test
    public void checkIfNotesAreDisplayedInOverview() {
        Note[] notes = {
                new Note("note1", "blabla1", 1),
                new Note("note2", "blabla2", 2),
                new Note("note3", "blabla3", 3)
        };

        activityActivityTestRule.getActivity().setNoteList(notes);

        ListView noteListView = activityActivityTestRule.getActivity().findViewById(R.id.notesList);

        assertEquals(notes.length, noteListView.getAdapter().getCount());
        for (int i = 0; i < notes.length; ++i) {
            assertTrue(notes[i].equals(noteListView.getAdapter().getItem(i)));
        }
    }

    @Test
    public void checkProperReturnFromNoteActivity() {
        onView(withId(R.id.createNoteButton)).perform(click());

        Random generator = new Random();
        String randomTitle = String.valueOf(generator.nextInt(100000));
        String randomContent = String.valueOf(generator.nextInt(100000));

        onView(withId(R.id.tfTitle)).perform(typeText(randomTitle));
        onView(withId(R.id.tfContent)).perform(typeText(randomContent));
        onView(withContentDescription(R.string.abc_action_bar_up_description)).perform(click());

        Note note = new Note(randomTitle, randomContent, 1);
        ListView noteListView = activityActivityTestRule.getActivity().findViewById(R.id.notesList);

        assertNotEquals(0, noteListView.getAdapter().getCount());
        boolean foundNote = false;
        for (int i = 0; i < noteListView.getAdapter().getCount(); ++i) {
            Note fetchedNote = (Note) noteListView.getAdapter().getItem(i);
            if (note.getTitle().compareTo(fetchedNote.getTitle()) == 0 &&
                    note.getContent().compareTo(fetchedNote.getContent()) == 0) {
                foundNote = true;
                break;
            }

        }
        assertTrue(foundNote);

    }

    @Test
    public void checkNoEmptyNote() {

        boolean foundEmptyNote = false;
        onView(withId(R.id.createNoteButton)).perform(click());

        onView(withContentDescription(R.string.abc_action_bar_up_description)).perform(click());

        ListView noteListView = activityActivityTestRule.getActivity().findViewById(R.id.notesList);

        for (int i = 0; i < noteListView.getAdapter().getCount(); ++i) {
            Note fetchedNote = (Note) noteListView.getAdapter().getItem(i);
            if (fetchedNote.getTitle().isEmpty() && fetchedNote.getContent().isEmpty()) {
                foundEmptyNote = true;
                break;
            }
        }

        assertFalse(foundEmptyNote);
    }

    @Test
    public void checkNotesListViewVisibility() {
        Note[] notes = {
                new Note("note1", "blabla1", 1)
        };

        activityActivityTestRule.getActivity().setNoteList(notes);
        onView(withId(R.id.notesList)).check(matches(isDisplayed()));
    }

    @Test
    public void checkNoteSaveButtonForEditingNote() {
        MainActivity activity = activityActivityTestRule.getActivity();
        activity.setNoteStorage(new NoteStorage(new DatabaseHelper(InstrumentationRegistry.getTargetContext(), null)));
        Note checkNote = new Note("note1", "blabla1", 1);
        Note[] notes = {
                checkNote
        };

        Util.fillNoteStorage(notes, activity);

        // click first element
        onData(anything()).inAdapterView(withId(R.id.notesList)).atPosition(0).perform(click());

        onView(withId(R.id.tfTitle)).perform(typeText("update"));

        onView(withContentDescription(R.string.abc_action_bar_up_description)).perform(click());

        Note updatedNote = new Note(checkNote.getTitle() + "update", checkNote.getContent(), checkNote.getPinned());

        ListView noteListView = activityActivityTestRule.getActivity().findViewById(R.id.notesList);

        assertEquals(1, noteListView.getAdapter().getCount());

        Note fetchedNote = (Note) noteListView.getAdapter().getItem(0);
        assertEquals(updatedNote, fetchedNote);
    }

    @Test
    public void checkToolbarButtonsVisibility() {
        onView(withId(R.id.search)).check(matches(isDisplayed()));
        openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());
        onView(withText(R.string.main_import)).check(matches(isDisplayed()));
        onView(withText(R.string.main_sort)).check(matches(isDisplayed()));
        onView(withText(R.string.main_export)).check(matches(isDisplayed()));
    }

    @Test
    public void checkIfNoteIsDeletedAfterPressingDeleteOK() {

        MainActivity activity = activityActivityTestRule.getActivity();
        activity.setNoteStorage(new NoteStorage(new DatabaseHelper(InstrumentationRegistry.getTargetContext(), null)));
        Note checkNote = new Note("note1", "blabla1", 1);
        Note[] notes = {
                checkNote
        };

        Util.fillNoteStorage(notes, activity);
        onData(anything()).inAdapterView(withId(R.id.notesList)).atPosition(activityActivityTestRule.getActivity().noteList.size() - 1).perform(click());

        ListView noteListView = activityActivityTestRule.getActivity().findViewById(R.id.notesList);
        onView(withId(R.id.tfTitle)).check(matches(withText(checkNote.getTitle())));

        onView(withId(R.id.tfContent)).check(matches(withText(checkNote.getContent())));

        onView(withContentDescription(R.string.action_remove)).perform(click());
        onView(withText(R.string.yes)).perform(click());

        boolean foundNote = false;
        for (int i = 0; i < noteListView.getAdapter().getCount(); ++i) {
            Note fetchedNote = (Note) noteListView.getAdapter().getItem(i);
            if (checkNote.getTitle().compareTo(fetchedNote.getTitle()) == 0 &&
                    checkNote.getContent().compareTo(fetchedNote.getContent()) == 0) {
                foundNote = true;
                break;
            }
        }
        assertTrue(!foundNote);
    }


    @Test
    public void checkIfNoteIsNotVisibleAfterSettingToProtected() {

        MainActivity activity = activityActivityTestRule.getActivity();
        activity.setNoteStorage(new NoteStorage(new DatabaseHelper(InstrumentationRegistry.getTargetContext(), null)));
        Note checkNote = new Note("note1", "blabla1", 1);
        Note[] notes = {
                checkNote
        };

        Util.fillNoteStorage(notes, activity);
        onData(anything()).inAdapterView(withId(R.id.notesList)).atPosition(activityActivityTestRule.getActivity().noteList.size() - 1).perform(click());

        ListView noteListView = activityActivityTestRule.getActivity().findViewById(R.id.notesList);
        onView(withId(R.id.tfTitle)).check(matches(withText(checkNote.getTitle())));

        onView(withId(R.id.tfContent)).check(matches(withText(checkNote.getContent())));

        onView(withContentDescription(R.string.action_protect)).perform(click());
        onView(withText(R.string.yes)).perform(click());

        boolean foundNote = false;
        for (int i = 0; i < noteListView.getAdapter().getCount(); ++i) {
            Note fetchedNote = (Note) noteListView.getAdapter().getItem(i);
            if (checkNote.getTitle().compareTo(fetchedNote.getTitle()) == 0 &&
                    checkNote.getContent().compareTo(fetchedNote.getContent()) == 0) {
                foundNote = true;
                break;
            }
        }
        assertTrue(!foundNote);
    }

    @Test
    public void checkIfNoteIsNotVisibleAfterSettingToUnprotected() {

        MainActivity activity = activityActivityTestRule.getActivity();
        activity.setNoteStorage(new NoteStorage(new DatabaseHelper(InstrumentationRegistry.getTargetContext(), null)));
        Note checkNote = new Note("note1", "blabla1", 1);
        Note[] notes = {
                checkNote
        };

        Util.fillNoteStorage(notes, activity);
        onData(anything()).inAdapterView(withId(R.id.notesList)).atPosition(activityActivityTestRule.getActivity().noteList.size() - 1).perform(click());

        ListView noteListView = activityActivityTestRule.getActivity().findViewById(R.id.notesList);
        onView(withId(R.id.tfTitle)).check(matches(withText(checkNote.getTitle())));

        onView(withId(R.id.tfContent)).check(matches(withText(checkNote.getContent())));

        onView(withContentDescription(R.string.action_protect)).perform(click());
        onView(withText(R.string.yes)).perform(click());

        boolean foundNote = false;
        for (int i = 0; i < noteListView.getAdapter().getCount(); ++i) {
            Note fetchedNote = (Note) noteListView.getAdapter().getItem(i);
            if (checkNote.getTitle().compareTo(fetchedNote.getTitle()) == 0 &&
                    checkNote.getContent().compareTo(fetchedNote.getContent()) == 0) {
                foundNote = true;
                break;
            }
        }
        assertTrue(!foundNote);
    }

    @Test
    public void checkIfSortButtonIsClickable() {
        openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());
        onView(withText(R.string.main_sort)).perform(click());
        // MenuItems are not clickable -> therefore isEnabled()
        onView(withText(R.string.main_sort_by_title_asc)).check(matches(isEnabled()));
        onView(withText(R.string.main_sort_by_created_date_desc)).check(matches(isEnabled()));
    }

    private void checkSort(Note[] notes, Note[] expectedNoteArray, int resourceButtonId) {
        MainActivity activity = activityActivityTestRule.getActivity();
        activity.setNoteStorage(new NoteStorage(new DatabaseHelper(InstrumentationRegistry.getTargetContext(), null)));
        Util.fillNoteStorage(notes, activity);

        openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());
        onView(withText(R.string.main_sort)).perform(click());
        onView(withText(resourceButtonId)).perform(click());
        ListView noteListView = activityActivityTestRule.getActivity().findViewById(R.id.notesList);
        assertEquals(expectedNoteArray.length, noteListView.getAdapter().getCount());
        for (int i = 0; i < expectedNoteArray.length; ++i) {
            assertEquals(expectedNoteArray[i], noteListView.getAdapter().getItem(i));
        }
    }

    @Test
    public void checkSortByTitle() {
        Note note1 = new Note("A_Test_title", "blabla1", 1);
        Note note2 = new Note("B_Test_title", "blabla2", 1);
        Note note3 = new Note("C_Test_title", "blabla3", 1);
        Note note4 = new Note("D_Test_title", "blabla4", 2);

        Note[] notes = {
                note1,
                note3,
                note4,
                note2,
        };
        Note[] expectedNoteArray = {
                note4,
                note1,
                note2,
                note3,
        };

        checkSort(notes, expectedNoteArray, R.string.main_sort_by_title_asc);
    }

    @Test
    public void checkSortByCreatedDate() {
        Note note1 = new Note("A_Test_title", "blabla1", 1);
        Note note2 = new Note("B_Test_title", "blabla2", 1);
        Note note3 = new Note("C_Test_title", "blabla3", 2);
        Note note4 = new Note("D_Test_title", "blabla4", 1);

        Note[] notes = {
                note1,
                note2,
                note3,
                note4,
        };
        Note[] expectedNoteArray = {
                note3,
                note4,
                note2,
                note1,
        };

        checkSort(notes, expectedNoteArray, R.string.main_sort_by_created_date_desc);
    }

    @Test
    public void checkNotePinning() {
        Note[] notes = {
                new Note("note1", "blabla1", 0),
                new Note("note2", "blabla2", 0),
                new Note("note3", "blabla3", 0)
        };
        activityActivityTestRule.getActivity().setNoteList(notes);

        try {
            runOnUiThread(new Runnable() {
                public void run() {
                    NoteAdapter customNoteAdapter = new NoteAdapter(
                            activityActivityTestRule.getActivity(), activityActivityTestRule.getActivity().noteList);

                    activityActivityTestRule.getActivity().noteListView.setAdapter(customNoteAdapter);
                }
            });
        } catch (Throwable e) {
            throw new RuntimeException();
        }


        ListView noteListView = activityActivityTestRule.getActivity().findViewById(R.id.notesList);
        Note checkNote = (Note) noteListView.getAdapter().getItem(1);

        onData(anything()).inAdapterView(withId(R.id.notesList)).atPosition(1).perform(click());
        openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());
        onView(withText(R.string.action_pinning)).perform(click());
        onView(withContentDescription(R.string.abc_action_bar_up_description)).perform(click());

        Note pinnedNote = (Note) noteListView.getAdapter().getItem(0);

        assertTrue(checkNote.getTitle().equals(pinnedNote.getTitle()) &&
                checkNote.getContent().equals(pinnedNote.getContent()));
    }

    @Test
    public void checkNoteSearch() {
        Note note1 = new Note("Adkdhe", "Ajdnh diekdn ekde eie", 1);
        Note note2 = new Note("Khdhd", "Jdkdh dhgrgrgnd udef rtr", 1);
        Note note3 = new Note("Odjeuzd", "Kduejd efdf ef dferfef", 2);
        Note note4 = new Note("Ldjehd", "Ldf dfe dgrgrg fgtujtge", 1);
        String pattern = "grgrg";

        Note[] notes = {
                note1,
                note2,
                note3,
                note4,
        };
        Note[] expectedNoteArray = {
                note4,
                note2,
        };

        MainActivity activity = activityActivityTestRule.getActivity();
        activity.setNoteStorage(new NoteStorage(new DatabaseHelper(InstrumentationRegistry.getTargetContext(), null)));
        Util.fillNoteStorage(notes, activity);

        onView(withId(R.id.search)).perform(click());
        onView(withId(android.support.design.R.id.search_src_text)).perform(typeText(pattern));
        ListView noteListView = activityActivityTestRule.getActivity().findViewById(R.id.notesList);
        Util.assertNoteArrayContains(noteListView.getAdapter(), expectedNoteArray);
    }

    @Test
    public void checkTrashMenuItemVisibility() {
        openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());
        onView(withText(R.string.trash_activity)).check(matches(isDisplayed()));
        onView(withText(R.string.trash_activity)).check(matches(isEnabled()));
    }

    @Test
    public void checkForLimitedContentBox() {
        Note note1 = new Note("Adkdhe", "Ajdnh diekdn ekde eie", 1);
        Note[] notes = {
                note1,
        };
        MainActivity activity = activityActivityTestRule.getActivity();
        activity.setNoteStorage(new NoteStorage(new DatabaseHelper(InstrumentationRegistry.getTargetContext())));
        Util.fillNoteStorage(notes, activity);
        TextView textView;
        do {
            textView = activityActivityTestRule.getActivity().findViewById(R.id.contentTextView);
        } while (textView == null);
        assertTrue((textView.getMaxLines() == 1) && (textView.getEllipsize() == TextUtils.TruncateAt.END));

    }

    @Test
    public void checkProtectedNotesMenuItemVisibility() {
        openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());
        onView(withText(R.string.protected_notes)).check(matches(isDisplayed()));
        onView(withText(R.string.protected_notes)).check(matches(isEnabled()));
    }

    @Test
    public void checkAlertDialogVisibility() {
        openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());
        onView(withText(R.string.protected_notes)).perform(click());
        try {
            onView(withText(R.string.new_password_dialog_title)).check(matches(isDisplayed()));
        } catch (Exception e) {
            onView(withText(R.string.password_dialog_title)).check(matches(isDisplayed()));
        }
        onView(withText(R.string.cancel)).perform(click());
    }

    @Test
    public void checkExporting() {
        MainActivity activity = activityActivityTestRule.getActivity();
        Note note1 = new Note("A_Test_title", "blabla1", 1);
        Note note2 = new Note("B_Test_title", "blabla2", 1);
        Note note3 = new Note("C_Test_title", "blabla3", 1);
        Note note4 = new Note("D_Test_title", "blabla4", 1);
        Note[] notes = {
                note1,
                note2,
                note3,
                note4,
        };
        Util.fillNoteStorage(notes, activity);
        openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());

        onView(withText(R.string.main_export)).perform(click());

        onData(anything()).inAdapterView(withId(R.id.notesList)).atPosition(activityActivityTestRule.getActivity().noteList.size() - 1).perform(click());

        onView(withId(R.id.confirmExportButton)).check(matches(isDisplayed()));
        onView(withId(R.id.confirmExportButton)).perform(click());
        File root = Environment.getExternalStorageDirectory();
        File outputDirectory = new File(root.getAbsolutePath() + "/Notes");

        assertTrue(outputDirectory.isDirectory());
        String[] files = outputDirectory.list();
        assertFalse(files.length == 0);
    }

    @Test
    public void checkProtectButtonVisibility() {
        MainActivity activity = activityActivityTestRule.getActivity();
        Note note1 = new Note("A_Test_title", "blabla1", 1);
        Note note2 = new Note("B_Test_title", "blabla2", 1);
        Note note3 = new Note("C_Test_title", "blabla3", 2);
        Note note4 = new Note("D_Test_title", "blabla4", 1);

        Note[] notes = {
                note1,
                note2,
                note3,
                note4,
        };
        Util.fillNoteStorage(notes, activity);

        onData(anything()).inAdapterView(withId(R.id.notesList)).atPosition(activityActivityTestRule.getActivity().noteList.size() - 1).perform(click());
        onView(withId(R.id.action_protect)).check(matches(isDisplayed()));
        onView(withId(R.id.action_protect)).check(matches(isClickable()));
    }


    @Test
    public void checkAddingTagsInNoteActivity() {
        Note note = new Note("Adkdhe", "Ajdnh diekdn ekde eie", 1);
        NoteTag tag1 = new NoteTag("tag1", 1);
        NoteTag tag2 = new NoteTag("tag2", 2);
        NoteTag tag3 = new NoteTag("tag3", 3);
        NoteTag[] noteTags = {tag1, tag3};
        NoteTagStorage noteTagStorage = new NoteTagStorage(new DatabaseHelper(InstrumentationRegistry.getTargetContext()));
        Util.fillNoteTagStorage(noteTags, noteTagStorage);
        onView(withId(R.id.createNoteButton)).perform(click());
        onView(withId(R.id.tfTitle)).perform(typeText(note.getTitle()));
        onView(withId(R.id.tfContent)).perform(typeText(note.getContent()));
        onView(withId(R.id.tag_edit_field)).perform(typeText(tag1.getName() + " "));
        onView(withId(R.id.tag_edit_field)).perform(typeText(tag1.getName() + " "));
        onView(withId(R.id.tag_edit_field)).perform(typeText(tag2.getName() + " "));
        onView(withId(R.id.tag_edit_field)).perform(typeText(tag3.getName() + " "));
        onView(withContentDescription(R.string.abc_action_bar_up_description)).perform(click());
        onData(anything()).inAdapterView(withId(R.id.notesList)).atPosition(0).perform(click());
        onView(withId(R.id.tag_edit_field)).check(matches(withText(tag1.getName() + " " + tag2.getName() + " " + tag3.getName() + " ")));
    }

    @Test
    public void checkFilteringTagsInNoteActivity() {
        Note note1 = new Note("Adkdhe", "Ajdnh diekdn ekde eie", 0);
        Note note2 = new Note("Khdhdgrgrg", "Jdkdh dhgnd udef rtr", 0);
        Note note3 = new Note("Odjeuzd", "Kduejd efdf ef dferfef", 0);
        Note note4 = new Note("Ldjehd", "Ldf dfe dgrgrg fgtujtge", 0);
        Note[] notes = {note1, note2, note3, note4};
        NoteTag tag1 = new NoteTag("tag1", 1);
        NoteTag tag2 = new NoteTag("tag2", 2);
        NoteTag tag3 = new NoteTag("tag3", 3);
        NoteTag[] noteTags = {tag1, tag2, tag3};
        final NoteStorage noteStorage = new NoteStorage(new DatabaseHelper(InstrumentationRegistry.getTargetContext()));
        NoteTagStorage noteTagStorage = new NoteTagStorage(new DatabaseHelper(InstrumentationRegistry.getTargetContext()));
        Util.fillNoteStorage(notes, noteStorage);
        Util.fillNoteTagStorage(noteTags, noteTagStorage);

        NoteTag[] note1Tags = {tag1, tag2};
        NoteTag[] note2Tags = {tag2, tag3};
        NoteTag[] note3Tags = {};
        NoteTag[] note4Tags = {tag1};
        NoteTag[][] notesTags = {note1Tags, note2Tags, note3Tags, note4Tags};

        Util.applyNotesTags(notesTags, notes, new Util.ApplyNotesTags() {
            @Override
            public void apply(Note note, NoteTag tag) {
                assertTrue(noteStorage.associate(note, tag));
            }
        });

        onView(withId(R.id.tagListButton)).perform(click());
        onData(anything()).inAdapterView(withId(R.id.tagListView)).atPosition(0).perform(click());

        Note[] expectedNoteArray = {
                note1,
